--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "bootstrap": "^5.1.3",
     "chart.js": "^3.9.1",
     "moment": "^2.29.3",
+    "ngmodeloptions": "^1.0.1",
     "ngx-cookie-service": "^13.0.1",
+    "ngx-infinite-scroll": "^13.0.0",
     "ngx-spinner": "^13.1.0",
     "ngx-webstorage": "^9.0.0",
     "primeflex": "^3.2.1",
